1.k8s_basic/2.multi_pod/ingress_nginx.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# 위 실행하면 aws에 로드밸런서 생성, eks클러스터에 ingress-controller등 생성됨.
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: leesh
  annotations:
  # 여기서 "nginx"로 지정한 것은 이 Ingress가 NGINX 기반 Ingress Controller에 의해 처리된다는 의미
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거 - 제거하는 이유 - 아래 path에서 임의로 생성한 url 영역 (/kevin1/)을 삭제하기 위함.
    
spec:
  rules:
  - host: server.kevin1983.shop  # 설정하려는 도메인 이름 Route53에서 이 레코드 생성필요함.
    http:
      paths:
      # - path: /  # 만약에 path 를 통해 서비스를 분기 태울 필요가 없으면 그냥 "/" 으로만 하면 된다. 위에 첫번째 prefix를 제거하는 부분도 필요없다.
      - path: /kevin1/ #bradkim1으로 시작하는 모든 url요청을 nginx-service 로 라우팅한다는 정규표현식
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      # - path: /kevin2/ #kevin2 로 시작하는 모든 url요청을 nginx-service2로 라우팅한다는 정규표현식
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nginx-service2
      #       port:
      #         number: 80
